--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
-  - source: /wiki/
+  - source: /wiki/*/en.md
     ignore:
       - /wiki/*/img/
     translation: /%original_path%/%two_letters_code%.md
